test/compile_errors/err_channel_ephemeral_element.w
//! expect-error: channel element type must be Send

use std.channel

fn main:
    let (_tx, _rx) = chan[&i32](1)
